[package]
name = "wayfarer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }
zbus = { version = "3.2.0", default-features = false, features = ["tokio"] }
